--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,4 @@ Flask-RESTful==0.3.3
 flask-mongoengine==1.0.0
 pylint-django==2.4.1        # linter help
 Faker==4.0.3                # to install fake data
+gunicorn
